--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "axios": "^0.18.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "http-proxy-middleware": "^0.19.1",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.6.3",
+    "react-select": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
@@ -39,6 +42,7 @@
     "eslint": "^5.9.0",
     "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "react-hot-loader": "^4.3.12",
