--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
   "homepage": "https://github.com/Roterior/Website#readme",
   "dependencies": {
     "axios": "^0.18.0",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "http-proxy-middleware": "^0.19.1",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
+    "react-modal": "^3.6.1",
     "react-select": "^2.1.2"
   },
   "devDependencies": {
@@ -42,7 +40,6 @@
     "eslint": "^5.9.0",
     "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.6.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "react-hot-loader": "^4.3.12",
@@ -51,5 +48,5 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
-  "description": "Simple site"
+  "description": "Movie Search with Filters"
 }
